// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoriesTableRow /> should render "Uncategorized articles" row when shouldRenderRowWithoutArticles is false but there are some uncategorized articles 1`] = `
<div>
  <tr
    class="row row"
  >
    <td
      class="wrapper normal"
    >
      <div
        class="cellContent"
      />
    </td>
    <td
      class="wrapper cell normal"
      data-testid="openCaret"
    >
      <div
        class="cellContent"
      >
        <span
          class="caret material-icons"
        >
          arrow_right
        </span>
        <span
          class=""
          id="category-title-uncategorized"
        >
          Uncategorized articles
        </span>
        <span
          class="count badge badge-light badge-pill"
        >
          1
        </span>
      </div>
    </td>
    <td
      class="wrapper normal"
    >
      <div
        class="cellContent"
      />
    </td>
    <td
      class="wrapper normal"
      width="104"
    >
      <div
        class="cellContent"
        style="width: 104px;"
      />
    </td>
    <td
      class="wrapper normal"
      width="104"
    >
      <div
        class="cellContent"
        style="width: 104px;"
      />
    </td>
    <td
      class="wrapper normal"
      width="146"
    >
      <div
        class="cellContent"
        style="width: 146px;"
      />
    </td>
  </tr>
</div>
`;

exports[`<CategoriesTableRow /> should render category row loading then idle: Idle state 1`] = `
<div>
  <tr
    class="row droppable-row"
    data-handler-id="T0"
    style="opacity: 1;"
  >
    <td
      class="wrapper normal"
      style="width: 25px;"
    >
      <div
        class="cellContent"
      >
        <div
          class="drag-handler material-icons"
          draggable="true"
        >
          drag_indicator
        </div>
      </div>
    </td>
    <td
      class="wrapper cell normal"
    >
      <div
        class="cellContent no-click"
      >
        <span
          class="caret material-icons"
        >
          arrow_right
        </span>
        <span
          class=""
          id="category-title-5"
        >
          Category 1
        </span>
        <span
          class="count badge badge-light badge-pill"
        >
          1
        </span>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 110px; width: 110px;"
    >
      <div
        class="cellContent no-click"
      >
        <div
          class="container"
        >
          <i
            class="icon material-icons"
          >
            visibility_off
          </i>
          <div
            class="title"
          >
            Unlisted
          </div>
        </div>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 104px; width: 104px;"
    >
      <div
        class="cellContent no-click"
      >
        <div
          class="language-bullet-list"
        >
          <div
            aria-label="Item for locale en-US"
            class="language-bullet-item"
          >
            <img
              alt="en-US"
              aria-label="Picture for language en-US"
              class="flag-emoji"
              src="test-file-stub"
            />
          </div>
        </div>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 104px; width: 104px;"
    >
      <div
        class="cellContent no-click"
      >
         
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 120px; width: 120px;"
    >
      <div
        class="cellContent actions no-click"
      >
        <div
          class="action-list"
        >
          <button
            aria-disabled="false"
            aria-label="categorySettings"
            class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
            id="categorySettings-5"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                settings
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-label="createNestedCategory"
            class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
            id="createNestedCategory-5"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                playlist_add
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-label="createNestedArticle"
            class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
            id="createNestedArticle-5"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                note_add
              </i>
            </span>
          </button>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`<CategoriesTableRow /> should render category row loading then idle: Loading state 1`] = `
<div>
  <tr
    class="row droppable-row"
    data-handler-id="T0"
    style="opacity: 1;"
  >
    <td
      class="wrapper normal"
      style="width: 25px;"
    >
      <div
        class="cellContent"
      >
        <div
          class="drag-handler material-icons"
          draggable="true"
        >
          drag_indicator
        </div>
      </div>
    </td>
    <td
      class="wrapper cell normal"
    >
      <div
        class="cellContent no-click"
      >
        <span
          class="caret material-icons"
        >
          arrow_right
        </span>
        <span
          class=""
          id="category-title-5"
        >
          Category 1
        </span>
        <span
          class="count badge badge-light badge-pill"
        >
          1
        </span>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 110px; width: 110px;"
    >
      <div
        class="cellContent no-click"
      >
        <div
          class="container"
        >
          <i
            class="icon material-icons"
          >
            visibility_off
          </i>
          <div
            class="title"
          >
            Unlisted
          </div>
        </div>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 104px; width: 104px;"
    >
      <div
        class="cellContent no-click"
      >
        <div
          class="language-bullet-list"
        >
          <div
            aria-label="Item for locale en-US"
            class="language-bullet-item"
          >
            <img
              alt="en-US"
              aria-label="Picture for language en-US"
              class="flag-emoji"
              src="test-file-stub"
            />
          </div>
        </div>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 104px; width: 104px;"
    >
      <div
        class="cellContent no-click"
      >
         
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 120px; width: 120px;"
    >
      <div
        class="cellContent actions no-click"
      >
        <div
          class="action-list"
        >
          <button
            aria-disabled="false"
            aria-label="categorySettings"
            class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
            id="categorySettings-5"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                settings
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-label="createNestedCategory"
            class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
            id="createNestedCategory-5"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                playlist_add
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-label="createNestedArticle"
            class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
            id="createNestedArticle-5"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                note_add
              </i>
            </span>
          </button>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`<CategoriesTableRow /> should render category that has children 1`] = `
<div>
  <tr
    class="row droppable-row"
    data-handler-id="T4"
    style="opacity: 1;"
  >
    <td
      class="wrapper normal"
      style="width: 25px;"
    >
      <div
        class="cellContent"
      >
        <div
          class="drag-handler material-icons"
          draggable="true"
        >
          drag_indicator
        </div>
      </div>
    </td>
    <td
      class="wrapper cell normal"
    >
      <div
        class="cellContent no-click"
      >
        <span
          class="caret material-icons"
        >
          arrow_right
        </span>
        <span
          class=""
          id="category-title-5"
        >
          Category 1
        </span>
        <span
          class="count badge badge-light badge-pill"
        >
          1
        </span>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 110px; width: 110px;"
    >
      <div
        class="cellContent no-click"
      >
        <div
          class="container"
        >
          <i
            class="icon material-icons"
          >
            visibility_off
          </i>
          <div
            class="title"
          >
            Unlisted
          </div>
        </div>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 104px; width: 104px;"
    >
      <div
        class="cellContent no-click"
      >
        <div
          class="language-bullet-list"
        >
          <div
            aria-label="Item for locale en-US"
            class="language-bullet-item"
          >
            <img
              alt="en-US"
              aria-label="Picture for language en-US"
              class="flag-emoji"
              src="test-file-stub"
            />
          </div>
        </div>
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 104px; width: 104px;"
    >
      <div
        class="cellContent no-click"
      >
         
      </div>
    </td>
    <td
      class="wrapper normal"
      style="min-width: 120px; width: 120px;"
    >
      <div
        class="cellContent actions no-click"
      >
        <div
          class="action-list"
        >
          <button
            aria-disabled="false"
            aria-label="categorySettings"
            class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
            id="categorySettings-5"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                settings
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-label="createNestedCategory"
            class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
            id="createNestedCategory-5"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                playlist_add
              </i>
            </span>
          </button>
          <button
            aria-disabled="false"
            aria-label="createNestedArticle"
            class="ui-button-wrapper-cef1 wrapper ghost ui-button-ghost-cef1 ui-button-secondary-cef1"
            id="createNestedArticle-5"
            type="button"
          >
            <span
              class="ui-button-content-cef1"
            >
              <i
                class="material-icons icon"
              >
                note_add
              </i>
            </span>
          </button>
        </div>
      </div>
    </td>
  </tr>
</div>
`;

exports[`<CategoriesTableRow /> should render null if shouldRenderRowWithoutArticles is false and there are no articles 1`] = `<div />`;
